In-post image alignment fix.

--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -47,6 +47,10 @@ img, figure {
   border-style: none;
 }
 
+figure.aligncenter {
+  margin: 0 auto;
+}
+
 figcaption {
   position: absolute;
   left: 0;
